--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: vdom
-version: 0.3.0
+version: 0.3.1
 author: Boris Kaul <localvoid@gmail.com>
 description: Virtual DOM diff/patch.
 homepage: https://github.com/localvoid/vdom
@@ -8,5 +8,6 @@ environment:
 dependencies:
   collection: '>=1.0.0 <2.0.0'
 dev_dependencies:
+  benchmark_harness: any
   browser: any
   unittest: any
