--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vdom
 version: 0.5.0
 author: Boris Kaul <localvoid@gmail.com>
-description: Virtual DOM diff/patch.
+description: Virtual DOM library.
 homepage: https://github.com/localvoid/vdom
 environment:
   sdk: '>=1.6.0'
